--- a/title.htm
+++ b/title.htm
@@ -2,7 +2,7 @@
     <head>
         <title>title</title>
     </head>
-    <link href="style.css" rel="stylesheet">
+    <link href="newstyle.css" rel="stylesheet">
     <body>
         <header>
             <nav>
@@ -14,7 +14,8 @@
         </header>
 
         <section><a href="index.htm">Play</a></section>
-        <section><a href="tutorial.htm">About</a></section>
+        <section><a href="tutorial.htm">Instructions</a></section>
+        <section><a href="aboutus/aboutus.htm">About</a></section>
         <section><a href="leaderboard.htm">Leaderboard</a></section>
 
     </body>
